--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -1,10 +1,9 @@
 <header>
-  <img src="<%= relative_url '/images/logo.svg' %>" alt="Logo" />
+  <h1 class="text-center text-2xl my-8">Urca Lab</h1>
 </header>
-
 <nav>
   <ul>
-    <li><a href="<%= relative_url '/' %>">Home</a></li>
+    <li><a class="text-primary hover:underline" href="<%= relative_url '/' %>">Home</a></li>
     <li><a href="<%= relative_url '/about' %>">About</a></li>
     <li><a href="<%= relative_url '/posts' %>">Posts</a></li>
   </ul>
