--- a/src/_layouts/default.erb
+++ b/src/_layouts/default.erb
@@ -3,13 +3,11 @@
   <head>
     <%= render "head", metadata: site.metadata, title: data.title %>
   </head>
-  <body class="<%= data.layout %> <%= data.page_class %>">
+  <body class="min-h-100 bg-background <%= data.layout %> <%= data.page_class %>">
     <%= render Shared::Navbar.new(metadata: site.metadata, resource: resource) %>
-
     <main>
       <%= yield %>
     </main>
-
     <%= render "footer", metadata: site.metadata %>
   </body>
 </html>
