apply basic site

--- a/src/_partials/_footer.erb
+++ b/src/_partials/_footer.erb
@@ -1,3 +1,5 @@
-<footer>
-  Contact me at <a href="mailto:<%= metadata.email %>"><%= metadata.email %></a>
+<footer class="bg-dark text-white py-6">
+  <div class="container mx-auto text-center">
+    <p>&copy; 2024 Wolf Technology SpA. Todos los derechos reservados.</p>
+  </div>
 </footer>
