--- a/src/_layouts/default.erb
+++ b/src/_layouts/default.erb
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="<%= site.locale %>">
+<html class="h-full" lang="<%= site.locale %>">
   <head>
     <%= render "head", metadata: site.metadata, title: data.title %>
   </head>
-  <body class="min-h-100 bg-background <%= data.layout %> <%= data.page_class %>">
-    <%= render Shared::Navbar.new(metadata: site.metadata, resource: resource) %>
-    <main>
+  <body class="h-full bg-background flex flex-col">
+    <%= render "navbar", metadata: site.metadata %>
+    <main class="flex-1">
       <%= yield %>
     </main>
     <%= render "footer", metadata: site.metadata %>
