--- a/src/_partials/_navbar.erb
+++ b/src/_partials/_navbar.erb
@@ -4,11 +4,11 @@
       <img src="/images/logo.png" alt="Logo" class="h-12">
     <% end %>
     <div class="text-xl italic">
-      Urca Lab
+      <%= metadata.title %>
     </div>
     <nav>
       <ul class="flex space-x-4">
-        <li><a href="#contact">ivan@urcalab.com</a></li>
+        <li><a href="#contact"><%= metadata.email %></a></li>
       </ul>
     </nav>
   </div>
