--- a/src/_partials/_head.erb
+++ b/src/_partials/_head.erb
@@ -3,7 +3,7 @@
 <% resource_title = strip_html(strip_newlines(title)) %>
 <title><% if resource_title != "Index" %><%= resource_title %> | <%= metadata.title %><% else %><%= metadata.title %>: <%= metadata.tagline %><% end %></title>
 <meta name="description" content="<%= metadata.description %>" />
-<script defer data-domain="urcalab.com" src="https://plausible.io/js/script.js"></script>
+<script defer data-domain="urcalab.com" src="https://d.urcalab.com/wt/script.js"></script>
 <link rel="stylesheet" href="<%= webpack_path :css %>" />
 <script src="<%= webpack_path :js %>" defer></script>
 <%= live_reload_dev_js %>
