update home page

--- a/src/_partials/_navbar.erb
+++ b/src/_partials/_navbar.erb
@@ -1,15 +1,15 @@
-<header class="bg-primary p-4 text-white">
-  <div class="container mx-auto flex justify-between items-center">
-    <% if false %>
-      <img src="/images/logo.png" alt="Logo" class="h-12">
-    <% end %>
-    <div class="text-xl italic">
-      <%= metadata.title %>
-    </div>
-    <nav>
-      <ul class="flex space-x-4">
-        <li><a href="#contact"><%= metadata.email %></a></li>
-      </ul>
+<header class="bg-primary py-4 px-32 text-slate-400">
+  <div class="container flex justify-between items-center">
+    <img src="/images/logo.png" alt="Logo" class="h-12 rounded-lg">
+
+    <nav class="flex space-x-8 px-4 border border-slate-400 rounded-full">
+      <a href="#contact" class="hover:text-white px-4 py-2">Filosofía</a>
+      <a href="#contact" class="hover:text-white px-4 py-2">Proyectos</a>
+      <a href="#contact" class="hover:text-white px-4 py-2">Contacto</a>
     </nav>
+
+    <div>
+      <a href="#contact" class="bg-slate-100 text-slate-900 rounded-full px-4 py-2">Iniciar sesión </a>
+    </div>
   </div>
 </header>
