--- a/src/_layouts/default.erb
+++ b/src/_layouts/default.erb
@@ -3,9 +3,9 @@
   <head>
     <%= render "head", metadata: site.metadata, title: data.title %>
   </head>
-  <body class="h-full bg-background flex flex-col">
+  <body class="h-full flex flex-col bg-primary">
     <%= render "navbar", metadata: site.metadata %>
-    <main class="flex-1">
+    <main class="flex-1 mx-32">
       <%= yield %>
     </main>
     <%= render "footer", metadata: site.metadata %>
