--- a/src/_partials/_footer.erb
+++ b/src/_partials/_footer.erb
@@ -1,5 +1,18 @@
-<footer class="bg-dark text-white py-6">
-  <div class="container mx-auto text-center">
-    <p>&copy; 2024 <a class="hover:underline" href="https://urcalab.com">Urca Lab</a>. Todos los derechos reservados.</p>
+<footer class="bg-slate-800 py-8 text-white px-32">
+  <div class="container flex justify-between items-center">
+    <div>
+      <p class="text-slate-400">Wolf Technology SpA &copy; 2024</p>
+      <p class="text-slate-400 text-xs">D-U-N-S® Number: 765376191</p>
+    </div>
+    <div>
+      <a href="mailto:contacto@urcalab.com" target="_blank" class="text-slate-400 hover:text-white">
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+  <path d="M1.5 8.67v8.58a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3V8.67l-8.928 5.493a3 3 0 0 1-3.144 0L1.5 8.67Z" />
+  <path d="M22.5 6.908V6.75a3 3 0 0 0-3-3h-15a3 3 0 0 0-3 3v.158l9.714 5.978a1.5 1.5 0 0 0 1.572 0L22.5 6.908Z" />
+</svg>
+      </a>
+
+    </div>
   </div>
 </footer>
