make it mobile friendle

--- a/src/_layouts/default.erb
+++ b/src/_layouts/default.erb
@@ -5,7 +5,7 @@
   </head>
   <body class="h-full flex flex-col bg-primary">
     <%= render "navbar", metadata: site.metadata %>
-    <main class="flex-1 mx-32">
+    <main class="flex-1 md:mx-32 mx-4">
       <%= yield %>
     </main>
     <%= render "footer", metadata: site.metadata %>
