--- a/src/_partials/_navbar.erb
+++ b/src/_partials/_navbar.erb
@@ -1,15 +1,23 @@
-<header class="bg-primary py-4 px-32 text-slate-400">
+<header class="bg-primary py-4 px-4 md:px-32 text-slate-400">
   <div class="container flex justify-between items-center">
     <img src="/images/logo.png" alt="Logo" class="h-12 rounded-lg">
 
-    <nav class="flex space-x-8 px-4 border border-slate-400 rounded-full">
+    <nav class="hidden md:flex space-x-8 px-4 border border-slate-400 rounded-full">
       <a href="#contact" class="hover:text-white px-4 py-2">Filosofía</a>
       <a href="#contact" class="hover:text-white px-4 py-2">Proyectos</a>
       <a href="#contact" class="hover:text-white px-4 py-2">Contacto</a>
     </nav>
 
-    <div>
-      <a href="#contact" class="bg-slate-100 text-slate-900 rounded-full px-4 py-2">Iniciar sesión </a>
+    <div class="hidden md:flex">
+      <a href="#contact" class="bg-slate-100 text-slate-900 rounded-full px-4 py-2">Iniciar sesión</a>
+    </div>
+
+    <div class="md:hidden">
+      <div class="flex items-center justify-center p-2 rounded-full hover:bg-slate-200 hover:text-slate-900">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+          <path fill-rule="evenodd" d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+        </svg>
+      </div>
     </div>
   </div>
 </header>
