--- a/src/_partials/_navbar.erb
+++ b/src/_partials/_navbar.erb
@@ -1,6 +1,6 @@
 <header class="bg-primary py-4 px-4 md:px-32 text-slate-400" data-controller="mobile-menu">
   <div class="container flex justify-between items-center">
-    <img src="/images/logo.png" alt="Logo" class="h-12 rounded-lg">
+    <img src="/images/logo.png" alt="Logo" class="h-12">
 
     <!-- Menu desktop -->
     <nav class="hidden md:flex space-x-8 px-4 border border-slate-400 rounded-full">
