add plausible snippet

--- a/src/_partials/_head.erb
+++ b/src/_partials/_head.erb
@@ -7,4 +7,5 @@
 <script defer data-domain="urcalab.com" src="https://d.urcalab.com/wt/script.js"></script>
 <link rel="stylesheet" href="<%= webpack_path :css %>" />
 <script src="<%= webpack_path :js %>" defer></script>
+<script defer data-domain="urcalab.com" src="https://plausible.io/js/script.js"></script>
 <%= live_reload_dev_js %>
